<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fcf1ed"
    tools:context=".programming_help">

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     >

<TextView
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:text=" Web design Details "
    android:textSize="20dp"
    android:textColor="#F8F9FA"
    android:fontFamily="serif"
    android:layout_marginTop="5dp"
     android:gravity="center"
    android:background="#B2292929"
    android:textStyle="bold"
    android:textAllCaps="true"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    />

     <TextView

         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="15dp"
         android:fontFamily="@font/banglaa"
         android:text="@string/bangla15"
         android:textColor="#575757"
         android:textColorHighlight="@color/white"
         android:textIsSelectable="true"
         android:textSize="21dp"

         />

     <TextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="Apps Develop Details "
         android:textSize="20dp"
         android:textColor="#F9F8FA"
         android:fontFamily="serif"
          android:gravity="center"
         android:background="#B2292929"
         android:padding="10dp"
         android:textStyle="bold"
         android:textAllCaps="true"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"

         />

     <TextView

         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/bangla16"
         android:fontFamily="@font/banglaa"
         android:textSize="21dp"
         android:textIsSelectable="true"
         android:textColor="#575757"
         android:textColorHighlight="@color/white"
         android:layout_marginTop="15dp"
         android:layout_marginLeft="5dp"

         />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="Android Studio"
         android:textSize="20dp"
         android:textColor="#F9F8FA"
         android:fontFamily="serif"
         android:layout_marginTop="5dp"
         android:gravity="center"
         android:background="#B2292929"
         android:textStyle="bold"
         android:textAllCaps="true"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         />


     <TextView

         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/bangla17"
         android:fontFamily="@font/banglaa"
         android:textSize="21dp"
         android:textIsSelectable="true"
         android:textColor="#575757"
         android:textColorHighlight="@color/white"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"

         />

     <TextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="Blog Details "
         android:textSize="20dp"
         android:textColor="#F9F8FA"
         android:fontFamily="serif"
         android:gravity="center"
         android:background="#B2292929"
         android:textStyle="bold"
         android:textAllCaps="true"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"
         />



     <TextView

         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/bangla18"
         android:fontFamily="@font/banglaa"
         android:textSize="21dp"
         android:textIsSelectable="true"
         android:textColor="#575757"
         android:textColorHighlight="@color/white"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="5dp"

         />

     <TextView
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:text="Editing Details "
         android:textSize="20dp"
         android:textColor="#F9F8FA"
         android:fontFamily="serif"
         android:gravity="center"
         android:background="#B2292929"
         android:textStyle="bold"
         android:textAllCaps="true"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="10dp"

         />

     <TextView

         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/bangla19"
         android:fontFamily="@font/banglaa"
         android:textSize="21dp"
         android:textIsSelectable="true"
         android:textColor="#575757"
         android:textColorHighlight="@color/white"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="5dp"

         />

     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Freelancing Site Details "
         android:textSize="20dp"
         android:textColor="#F9F8FA"
         android:fontFamily="serif"
         android:gravity="center"
         android:background="#B2292929"
         android:padding="10dp"
         android:textStyle="bold"
         android:layout_marginLeft="0dp"
         />

     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/englaish10"
         android:textSize="20dp"
         android:textColor="#F9F8FA"
         android:fontFamily="serif"
         android:gravity="center"
         android:background="#B2292929"
         android:padding="10dp"
         android:textStyle="bold"
         android:layout_marginLeft="0dp"
         />


 </LinearLayout>



</ScrollView>
